--- a/guide.bib
+++ b/guide.bib
@@ -146,6 +146,17 @@ pages = {620},
 month = may
 }
 
+@article{Castellano:2009ce,
+author = {Castellano, Claudio and Fortunato, Santo and Loreto, Vittorio},
+title = {{Statistical physics of social dynamics}},
+journal = {Rev. Mod. Phys.},
+year = {2009},
+volume = {81},
+number = {2},
+pages = {591--646},
+month = may
+}
+
 @article{Bialek:2012cs,
 author = {Bialek, William and Cavagna, Andrea and Giardina, Irene and Mora, Thierry and Silvestri, Edmondo and Viale, Massimiliano and Walczak, Aleksandra M},
 title = {{Statistical mechanics for natural flocks of birds}},
