--- a/guide.tex
+++ b/guide.tex
@@ -11,6 +11,7 @@
 \newcommand{\To}{\longrightarrow}
 \newcommand{\BX}{\mathbf{B}(X)}
 \bibliographystyle{unsrt}
+\graphicspath{{images}}
 
 \begin{document}
 
@@ -50,7 +51,7 @@ The modular structure of CONIII was inspired by the machine learning package sci
 With CONIII, it is possible to solve the inverse Ising problem with a variety of algorithms in just a few lines of code.
 %There are a variety of techniques for approaching the inverse problem|often in context of a particular model|but they are often presented as different approaches without clear relations to one another. Instead of focusing on the details of each technique separately, we relate these techniques to one another and point out when one would fail or be difficult to apply.
 
-We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
+We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
 \section{What is maximum entropy?}
 Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that a followed from a three basic postulates. According to Shannon, information entropy, hereon just ``entropy'', over the probability distribution of possible configurations $s$ of a model is
@@ -84,32 +85,56 @@ The resulting model is a Boltzmann distribution over states
 otherwise known as the exponential family of models outside of the physics literature. If we fix the average energy of the system, we get the microcanonical ensemble (See Appendix). which is equivalent to the axiom that all microstates have equal probability (that is the maxent distribution).
 
 \subsection{Ising model}
-Let's take a concrete example. Imagine that you have a system with $n$ components that have been sampled many times. To be more specific, we'll take $n=9$ voters on the US Supreme Court that either vote with in the majority, the winning coalition, or in the minority. [More generally, we could think some like gene expression levels in a cell a coarse-grained representation where relatively high or low expression can be represented by a binary variable. Of course, we don't have to restrict ourselves to binary variables \cite{Lezon:2006ws}.]
+The Ising model is a statistical physics model of magnetism. In its simplest form, it consists of a set of sites $\sigma_{\rm i}$, or spins, with 2 possible orientations (up and down), coupled to an external magnetic field $h$ and coupled to each other with couplings $J$ \cite{Reif:2009uf}. The strength of the magnetic field determines the tendency of each of the spins to orient in a particular direction and the couplings $J$ determine whether the spins tend to point together ($J>0$) or against each other ($J<0$). Typically, neighbors are defined as spins that interact with one another given by some underlying lattice structure as in Figure \ref{gr:ising}.
 
-A well known example is that of the Ising model with $N$ binary spins $\sigma_{\rm i} \in {-1,1}$ with Hamiltonian 
+\begin{figure}[htbp]\centering
+	\includegraphics[width=.85\linewidth]{images/ising}
+\caption{Example of an Ising model on a lattice.}
+\label{gr:ising}
+\end{figure}
+
+More generally, we could imagine that each of the spins has a particular bias given by an indexed local field $h_{\rm i}$ as well as particular interactions with neighbors $J_{\rm ij}$. The corresponding Hamiltonian is
 \begin{align}
-	E &= -\sum_{\br{\rm ij}} J_{\rm ij}\si\sj -\sum_{\rm i=1}^N h_{\rm i}\si
+	E &= -\sum_{\rm \br{ij}} J_{\rm ij}\si\sj -\sum_{\rm i=1}^Nh_{\rm i}\si
 \end{align}
-with couplings $J_{\rm ij}$ between neighbors and external fields specific to each spin $h_{\rm i}$. The Ising model can be obtained from insisting that the magnetizations and pairwise correlations of the model match those observed in the data
+and as mentioned before states with lower energy are more likely so spin tend to orient along the direction of the local field $h_{\rm i}^{\rm local} = \sum_{\rm j}J_{\rm ij}\sj +h_{\rm i}$. 
+
+The Ising model corresponds to a pairwise maximum entropy model.
+Fixing the the magnetizations and pairwise correlations to those observed in the data
 \begin{align}
 	\br{\si}_{\rm data} &= \br{\si}\\
 	\br{\si\sj}_{\rm data} &= \br{\si\sj}
 \end{align}
-
-Enforcing the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data \cite{Cover:2006tl}
+Constructing the Langrangian from Eq ??
 \begin{align}
-	D_{KL}(p_{\rm data}||p_{\rm ME}) &= \sum_s p_{\rm data} \log\left(\frac{p_{\rm data}}{p_{\rm ME}}\right)\\
-	\frac{\partial D}{\partial \lambda_k} &= \sum_s p_{\rm data} \frac{\partial (-E-\log Z)}{\partial \lambda_k}\\
+	\mathcal{L}[p] &= -\sum_s p(s)\log p(s) +\sum_{\rm \br{ij}} J_{\rm ij}\br{\si\sj} +\sum_{\rm i=1}^Nh_{\rm i}\br{\si}\\
+	\frac{\partial\mathcal{L}[p]}{\partial p(s)} &= -\log p(s)-1 +\sum_{\rm \br{ij}} J_{\rm ij}\si\sj +\sum_{\rm i=1}^Nh_{\rm i}\si\\
+	\log p(s) &= -1 +\sum_{\rm \br{ij}} J_{\rm ij}\si\sj +\sum_{\rm i=1}^Nh_{\rm i}\si\\
+	p(s) &= \left.e^{-E(s)}\right/Z\\
+\intertext{where to enforce normalization of the probability distribution $\sum_s p(s) = 1$,}
+	Z &= \sum_s e^{-E(s)}
+\end{align}
+Thus, the resulting model is exactly the Ising model mentioned earlier.
+
+Finding the parameters that match the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data \cite{Cover:2006tl}
+\begin{align}
+	D_{KL}(p_{\rm data}||p_{\rm ME}) &= \sum_s p_{\rm data} \log\left(\frac{p_{\rm data}(s)}{p_{\rm ME}(s)}\right)\\
+	\frac{\partial D}{\partial \lambda_k} &= \sum_s p_{\rm data}(s) \frac{\partial (-E-\log Z)}{\partial \lambda_k}\\
 	0 &= \br{f_k}_{\rm data} -\br{f_k}_{\rm ME}
 \end{align}
-[Of course, we also have to show that the problem is convex.] In other words, the parameters of the maximum entropy model are the ones that minimize the ``distance'' to the distribution of the data.
+[Of course, we also have to show that the problem is convex.] In other words, the parameters of the maximum entropy model are the ones that minimize the information theoretic ``distance'' to the distribution of the data. Note that these parameters are given by the data and so there is search for the best parameters in the conventional sense.
 
-When the $K$ nonlinear equations are coupled, this becomes quite hard to solve analytically. However, we have numerical methods at our disposal.
+When the nonlinear equations are coupled, this cannot be solved analytically in general. Below we discuss some analytical approximations and numerical techniques for approaching the inverse problem.
+
+%Imagine that you have a system with $n$ components that have been sampled many times. To be more specific, we'll take $n=9$ voters on the US Supreme Court that either vote with in the majority, the winning coalition, or in the minority. [More generally, we could think some like gene expression levels in a cell a coarse-grained representation where relatively high or low expression can be represented by a binary variable. Of course, we don't have to restrict ourselves to binary variables \cite{Lezon:2006ws}.]
 
 The primary difficulty for solving probabilistic models is calculating the normalization because of the size of the state space. Most of the methods below involve avoiding that problem in the first place (Monte Carlo sampling, MCH) or approximations to drastically reduce the state space (pseudolikelihood, adaptive cluster expansion).
 
+\section{Examples}
+Supreme Court. Neurons. Monkeys. Genes.
+
 \section{Exact enumeration}
-One approach is to write the equations down and feed them into any optimization algorithm. This approach does not scale well because the number of terms in the partition function grows exponentially with the system size. For small systems, however, this is feasible.
+One approach is to write the equations down and feed them into a standard optimization algorithm. This approach does not scale well because the number of terms in the partition function grows exponentially with system size. For relatively small systems $n\leq15$ on a typical desktop computer, however, this approach is feasible.
 
 This is implemented in the {\tt Exact} class.
 
@@ -118,10 +143,9 @@ This is implemented in the {\tt Exact} class.
 
 Analytic approximations simplify the equations to an extent where they are tractable.
 
+
 \section{Monte Carlo methods}
-
-
-Perhaps the purest computational and most expensive route to solving these equations is to use Monte Carlo sampling to approximate the distribution and guess how to adjust the parameters appropriately. We will not explain MCMC methods in detail because of the plethora of useful texts \cite{MacKay:2005wc}. [For those unfamiliar with MCMC sampling, we give a brief introduction in Appendix A.]
+Perhaps the most straightforwards and most expensive route to solving these equations is to use Monte Carlo Markov Chain sampling to approximate the distribution and guess how to adjust the parameters appropriately. We will not explain MCMC methods in detail because of the plethora of useful texts \cite{MacKay:2005wc}. [For those unfamiliar with MCMC sampling, we give a brief introduction in Appendix A.]
 
 The simplest MCMC algorithm is to generate a random sample to estimate the constraints $\br{f_{\rm k}}$, and then to implement a learning rule to adjust the parameters.
 This can be combined with a variety of stochastic gradient descent methods to reduce the number of sampling steps.
@@ -153,6 +177,7 @@ Typically, one must check in on the progress of the algorithm to tune the variou
 MCH is implemented in the {\tt MCH} class.
 
 \section{Pseudolikelihood}
+An analytic approximation that reduces the computational complexity of the problem.
 
 \section{Minimum Probability Flow}
 Minimum probability flow is an efficient method using an analytic approximation to write an easily computable objective function \cite{SohlDickstein:2011im}. Instead of estimating the probability distribution, the overarching idea is to analytically approximate how the probability distribution \textit{changes} as we modify the \textit{configurations}.
