--- a/guide.tex
+++ b/guide.tex
@@ -2,6 +2,7 @@
 \usepackage{graphics,color,graphicx,amsmath}
 \usepackage{xr,natbib}
 \bibliographystyle{vancouver}
+\usepackage{amsbsy}
 
 \newcommand{\norm}[1]{\left\Vert#1\right\Vert}
 \newcommand{\abs}[1]{\left\vert#1\right\vert}
@@ -26,6 +27,7 @@
 \newcommand{\tg}[1]{\textcolor{green}{#1}}
 \newcommand{\si}[0]{\sigma_{\rm i}}
 \newcommand{\sj}[0]{\sigma_{\rm j}}
+\newcommand{\bs}[1]{\boldsymbol{#1}}
 
 \title{Convenient Interface to Inverse Ising (CONIII): A package for solving maximum entropy models}
 \author{Edward D Lee, Bryan C Daniels}
@@ -38,7 +40,7 @@ CONIII is a Python project for providing a simple interface to various algorithm
 
 \maketitle
 
-\tr{{\bf Caution:} Work in progress. Errors rampant.}
+\tr{{\bf Caution:} Work in progress.}
 
 \section{Introduction}
 Many biological and social systems are characterized by collective behavior whether it is the correlated pattern of neuron firing \cite{Schneidman:2006he}, protein diversity in the immune system, conflict participation in monkeys, flocking in birds \cite{Bialek:2012cs}, statistics of letters in words, or consensus voting in the US Supreme Court \cite{Lee:2015ev}. Statistical physics is a natural approach to probing such systems precisely because they are collective \cite{Castellano:2009ce}.
@@ -54,7 +56,7 @@ With CONIII, it is possible to solve the inverse Ising problem with a variety of
 We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
 \section{What is maximum entropy?}
-Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that a followed from a three basic postulates. According to Shannon, information entropy, hereon just ``entropy'', over the probability distribution of possible configurations $s$ of a model is
+Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that follows from insisting on some elementary principles of consistency. According to Shannon, information entropy, hereon just ``entropy'', over the probability distribution of possible configurations $s$ of a model is
 \begin{align}
 	S[p] &= -\sum_{s\in \mathcal{S}} p_s \log p_s
 \end{align}
@@ -83,6 +85,16 @@ The resulting model is a Boltzmann distribution over states
 	Z &= \sum_\sigma e^{-E(s)}
 \end{align}
 otherwise known as the exponential family of models outside of the physics literature. If we fix the average energy of the system, we get the microcanonical ensemble (See Appendix). which is equivalent to the axiom that all microstates have equal probability (that is the maxent distribution).
+
+Finding the parameters that match the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data \cite{Cover:2006tl}
+\begin{align}
+	D_{KL}(p_{\rm data}||p_{\rm ME}) &= \sum_s p_{\rm data} \log\left(\frac{p_{\rm data}(s)}{p_{\rm ME}(s)}\right)\\
+	\frac{\partial D}{\partial \lambda_k} &= \sum_s p_{\rm data}(s) \frac{\partial (-E-\log Z)}{\partial \lambda_k}\label{eq:dkl deriv}\\
+	0 &= \br{f_k}_{\rm data} -\br{f_k}_{\rm ME}\label{eq:fk-fk}
+\end{align}
+[Of course, we also have to show that the problem is convex.] In other words, the parameters of the maximum entropy model are the ones that minimize the information theoretic ``distance'' to the distribution of the data. Note that these parameters are given by the data and so there is search for the best parameters in the conventional sense.
+
+When the nonlinear equations are coupled, this cannot be solved analytically in general. Below we discuss some analytical approximations with numerical techniques for approaching the inverse problem.
 
 \subsection{Ising model}
 The Ising model is a statistical physics model of magnetism. In its simplest form, it consists of a set of sites $\sigma_{\rm i}$, or spins, with 2 possible orientations (up and down), coupled to an external magnetic field $h$ and coupled to each other with couplings $J$ \cite{Reif:2009uf}. The strength of the magnetic field determines the tendency of each of the spins to orient in a particular direction and the couplings $J$ determine whether the spins tend to point together ($J>0$) or against each other ($J<0$). Typically, neighbors are defined as spins that interact with one another given by some underlying lattice structure as in Figure \ref{gr:ising}.
@@ -116,42 +128,34 @@ Constructing the Langrangian from Eq ??
 \end{align}
 Thus, the resulting model is exactly the Ising model mentioned earlier.
 
-Finding the parameters that match the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data \cite{Cover:2006tl}
-\begin{align}
-	D_{KL}(p_{\rm data}||p_{\rm ME}) &= \sum_s p_{\rm data} \log\left(\frac{p_{\rm data}(s)}{p_{\rm ME}(s)}\right)\\
-	\frac{\partial D}{\partial \lambda_k} &= \sum_s p_{\rm data}(s) \frac{\partial (-E-\log Z)}{\partial \lambda_k}\\
-	0 &= \br{f_k}_{\rm data} -\br{f_k}_{\rm ME}
-\end{align}
-[Of course, we also have to show that the problem is convex.] In other words, the parameters of the maximum entropy model are the ones that minimize the information theoretic ``distance'' to the distribution of the data. Note that these parameters are given by the data and so there is search for the best parameters in the conventional sense.
-
-When the nonlinear equations are coupled, this cannot be solved analytically in general. Below we discuss some analytical approximations with numerical techniques for approaching the inverse problem.
-
 %Imagine that you have a system with $n$ components that have been sampled many times. To be more specific, we'll take $n=9$ voters on the US Supreme Court that either vote with in the majority, the winning coalition, or in the minority. [More generally, we could think some like gene expression levels in a cell a coarse-grained representation where relatively high or low expression can be represented by a binary variable. Of course, we don't have to restrict ourselves to binary variables \cite{Lezon:2006ws}.]
 %The primary difficulty for solving probabilistic models is calculating the normalization because of the size of the state space. Most of the methods below involve avoiding that problem in the first place (Monte Carlo sampling, MCH) or approximations to drastically reduce the state space (pseudolikelihood, adaptive cluster expansion).
 
-\section{Examples}
-Supreme Court. Neurons. Monkeys. Genes.
 
 \section{Exact enumeration}
-One approach is to write the equations down and feed them into a standard optimization algorithm. This approach does not scale well because the number of terms in the partition function grows exponentially with system size. For relatively small systems $n\leq15$ on a typical desktop computer, however, this approach is feasible. [Simple example with logical gates?]
+The na\"{i}ve approach is to write the equations from Eq \ref{eq:dkl deriv} directly:
+\begin{align}
+	\br{f_{\rm k}} &= -\frac{\partial \ln Z}{\partial \lambda_{\rm k}}
+\end{align}
+Matching these with the data $\br{f_k}_{\rm data}$ is the purview of any standard optimization algorithm. Clearly, this approach does not scale well because the number of terms in the partition function grows exponentially with system size. For relatively small systems $n\leq15$, however, this approach is feasible on a typical desktop computer.
+%[Simple example with logical gates?]
 
-For the Ising model, the first step in the algorithm for writing down the equations is $\mathcal{O}(L^2 2^{N})$ where $L$ is the number of constraints and $N$ the number of spins. In the second step, each evaluation of the objective in the minimization algorithm will be of the same order.
+For the Ising model, the first step in the algorithm for writing down the equations is $\mathcal{O}(K^2 2^{N})$ where $K$ is the number of constraints and $N$ the number of spins. In the second step, each evaluation of the objective in the minimization algorithm will be of the same order.
 
-This is implemented in the {\tt Exact} class.
+The {\tt Exact} class supplies methods for writing Eqs \ref{eq:fk-fk} into a file and solving them with the {\tt scipy.optimize} library.
 
 \section{Mean-field methods}
 [I'm imagining that we neatly tie together the different techniques. As far as I know, they're all different approaches and no one's done a real good job relating one technique to another. It's easy enough to go read a bunch of different papers about each method, but it's not so clear why one is preferable over another.]
 
 Analytic approximations simplify the equations to an extent where they are tractable.
 
+{\tt RegularizedMeanField}
 
 \section{Monte Carlo methods}
-Perhaps the most straightforwards and most expensive route to solving these equations is to use Monte Carlo Markov Chain sampling to approximate the distribution and guess how to adjust the parameters appropriately. We will not explain MCMC methods in detail because of the plethora of useful texts \cite{MacKay:2005wc}. [For those unfamiliar with MCMC sampling, we give a brief introduction in Appendix A.]
+Perhaps the most straightforward and most expensive computational approach is to use Monte Carlo Markov Chain sampling to approximate the distribution and adjust the parameters appropriately after each step. [For details about MCMC methods see Appendix A and \cite{MacKay:2005wc}.] The magic behind MCMC approaches is that only relative probabilities of states need to be known to return a sample of the distribution. Thus, we no longer need to calculate the partition function, but can instead compute the difference in energy between two states.
 
-The simplest MCMC algorithm is to generate a random sample to estimate the constraints $\br{f_{\rm k}}$, and then to implement a learning rule to adjust the parameters.
-This can be combined with a variety of stochastic gradient descent methods to reduce the number of sampling steps.
+The simplest MCMC algorithm is to generate a sample to estimate the constraints $\br{f_{\rm k}}$ from the current set of parameters and then to implement a learning rule to adjust the parameters. This can be combined with a variety of stochastic gradient descent methods to reduce the number of sampling steps. The particular technique implemented in CONIII is the Monte Carlo Histogram method \cite{Broderick:2007wq}.
 
-\subsection{Monte Carlo histogram}
 Since the sampling step is expensive, could we reuse a sample for more than one gradient descent step? This is the idea behind Monte Carlo histogram \cite{Broderick:2007wq}. Instead of sampling every time we change the parameters, we can predict how the distribution will change if we modify the parameters slightly. Given that we have a sample with probability distribution $p_s$ generated with parameters $\lambda_{\rm k}$, we would like to estimate the distribution $p_s'$ from parameters $\lambda_{\rm k}' = \lambda_{\rm k}+\Delta\lambda_{\rm k}$.
 \begin{align}
 	p_s' &= \frac{p'_s}{p_s}p_s\\
@@ -168,24 +172,50 @@ Likewise, the ratio of the partition function can be estimated
 
 The main difficulty with MCH is choosing a learning rule for how to update the Lagrangian multipliers $\{\lambda_k\}$ at each iteration while being careful to stay within the bounds of a reasonable extrapolation. One suggestion is to update the parameters with some inertia
 \begin{align}
-	\Delta\lambda_k(t+1) &= \Delta \lambda_k(t) + \eta \Delta\lambda_k(t-1)\\
-	\Delta \lambda_k(t) &= \epsilon\left(\br{f_k}'-\br{f_k}\right)
+	\Delta\lambda_k(t+1) &= \Delta \lambda_k(t) + \eta \Delta\lambda_k(t-1)\label{eq:mch learn1}\\
+	\Delta \lambda_k(t) &= \epsilon\left(\br{f_k}'-\br{f_k}\right)\label{eq:mch learn2}
 \end{align}
 This has the correct fixed points. One suggestion is to shrink $\epsilon$ exponentially with the number of iterations. In the code, there are more parameters $\Delta\lambda_{\rm max}$ and $\Delta\lambda_{\rm norm}\sum_k \sqrt{\Delta\lambda_{\rm k}^2}$ that restrict. Another heuristic is to begin with estimates on a small data set and increase the size of the data set as we refine our estimates of the parameters.
 
 Typically, one must check in on the progress of the algorithm to tune the various parameters. If the extrapolation steps or the gradient steps are too large, the algorithm will fail to converge (or may even start diverging).
 
-The runtime for the sampling step is proportional to the number of samples $n_{\rm sample}$ and the number of MCMC iterations $n_{MC}$, $\mathcal{O}(n_{MC} n_{sample} L^2)$, whereas the MCH estimate is relatively quick $\mathcal{O}(n_{\rm sample}n_{\rm MCH}L^2)$ because the number of MCH approximation steps is typically of order 10.
+The runtime for the sampling step is proportional to the number of samples $n_{\rm sample}$, number of MCMC iterations $n_{MC}$, the number of constraints $K$:
+$\mathcal{O}(n_{\rm MC} n_{\rm sample} K)$, whereas the MCH estimate is relatively quick $\mathcal{O}(n_{\rm sample}n_{\rm MCH}K)$ because the number of MCH approximation steps is much smaller than the number of MCMC sampling iterations $n_{\rm MCH}<<n_{\rm MC}$. What is the runtime for the learning rules Eqs \ref{eq:mch learn1} and \ref{eq:mch learn2}?
+For the Ising model, $K\sim N^2$, the system size squared.
 
 MCH is implemented in the {\tt MCH} class.
 
 \section{Pseudolikelihood}
-The pseuedolikelihood approach is an analytic approximation to the likelihood that drastically reduces the computational complexity of the problem.
+The pseudolikelihood approach is an analytic approximation to the likelihood that drastically reduces the computational complexity of the problem and is exact in the thermodynamic limit \cite{Aurell:2012hi}. We maximize the conditional probability 
+\begin{align}
+	p\left(\sigma_{\rm i}|\boldsymbol{\sigma}_{\backslash \rm i};h,J\right) &= \left( 1+e^{-2\sigma_{\rm i} \left(h_{\rm i}+\sum_{j\neq i}J_{\rm ij}\sj\right)} \right)^{-1}
+\end{align}
+
+The objective consists of maximizing the conditional likelihood the set of parameters that correspond to the ith spin
+\begin{align}
+	f(h_{\rm i},\bs{J}_{\rm i}) &= \sum_{\rm r=1}^R \ln p\left(\left.\sigma_{\rm i}^{(r)}\right|\bs{\sigma}_{\backslash\rm i}^{(r)}\right)
+\end{align}
+summed over all data points indexed by $r$.
+In the limit where the ensemble is well sampled, the average over the data can be replaced by an average over the ensemble
+\begin{align}
+	f(h_{\rm i},\bs{J}_{\rm i}) &= \sum_{\bs{\sigma}} \ln p\left(\left.\sigma_{\rm i}^{(r)}\right|\bs{\sigma}_{\backslash\rm i}^{(r)}\right)p(\bs{\sigma};h,J)\\
+\intertext{At maximum likelihood,}
+	\frac{\partial f}{\partial J_{\rm ij}} &= \sum_{\bs{\sigma}} \ln p\left(\left.\sigma_{\rm i}^{(r)}\right|\bs{\sigma}_{\backslash\rm i}^{(r)}\right)p(\bs{\sigma};h,J)\\
+	0 &=
+\end{align}
+
+Each iteration goes like $O(RN^2)$.
+
+We have implemented pseudolikelihood for the Ising model as detailed in \cite{Aurell:2012hi} in {\tt Pseudo}.
 
 \section{Minimum Probability Flow}
-Minimum probability flow is an efficient method using an analytic approximation to write an easily computable objective function \cite{SohlDickstein:2011im}. Instead of estimating the probability distribution, the overarching idea is to analytically approximate how the probability distribution \textit{changes} as we modify the \textit{configurations}.
+Minimum probability flow uses an analytic approximation to write an easily computable objective function \cite{SohlDickstein:2011im}. Instead of estimating the probability distribution, the overarching idea is to analytically approximate how the probability distribution \textit{changes} as we modify the \textit{configurations}.
 
-As before, we start with minimizing the Kullback-Leibler divergence, but instead of taking the derivative with respect to the parameters, we would like to take the derivative with respect to the states \cite{Hyvärinen:2007ed}. If the state space is discrete, we can instead postulate a set of dynamics for how the probability evolves (more on this later), and take the derivative with respect to time. The idea is that  the change in the probability distribution relative to the data goes to zero when we have converged to the data. Thus, we can now take a derivative with respect to the parameters.
+As in the other methods so far mentioned, the approach has been to maximize the objective (the likelihood function) by immediately taking the derivative with respect to the parameters. And as we have seen, this approach is not feasible for large systems. With MPF, we insert another step before taking the derivative where we look at how the probability distribution will change as the configurations are modified. 
+
+Deterministic dynamics.
+
+As before, we start with minimizing the Kullback-Leibler divergence, but instead of taking the derivative with respect to the parameters, we would like to take the derivative with respect to the states \cite{Hyvärinen:2007ed}. If the state space is discrete, we can instead postulate a set of dynamics for how the probability evolves (more on this later), and take the derivative with respect to time. The idea is that  the change in the probability distribution relative to the data goes to zero when we have converged to the data. The parameters are found such that this happens.
 
 As is explained \cite{SohlDickstein:2011im}, one set of dynamics (they must converge to the equilibrium distribution?) is simply Monte Carlo where the master equation gives
 \begin{align}
@@ -206,6 +236,12 @@ MPF is implemented in the {\tt MPF} class.
 Implemented in the {\tt ClusterExpansion} class.
 
 \section{Bethe/Kikuchi free energy/cavity methods}
+Another approach involves a cluster-expansion of the free energy, also known as the cavity method. This has not yet been implemented in CONIII.
+
+The cavity method involves use of the marginalized distribution.
+
+\section{Samplers}
+In CONIII, we have implemented two versions of the Metropolis algorithm. One is specific to the Ising model {\tt MCIsing} and the other {\tt MC} can sample a system as long as the function for calculating the energy is suppiled by the user.
 
 \subsection{How to validate a maxent model}
 The hope of maxent is that by fixing some aspects of the probability distribution, we can forget about the rest. In this sense, maxent is not a typical fitting method where the optimal parameters are sought such that the model is as good as possible. Instead, we specify which aspects of the system we think are important and the resulting ``parameters'' come from the maximum entropy principle.
