--- a/guide.tex
+++ b/guide.tex
@@ -35,7 +35,8 @@
 %\date{}                                           % Activate to display a given date or no date
 
 \begin{abstract}
-CONIII is a Python project for providing a simple interface to various algorithms for solving maximum entropy models. We describe the maximum entropy problem and give an overview of various algorithms that have been proposed to solve it that are implemented as part of CONIII. We then show examples of models that have been solved on various data sets using CONIII.
+CONIII is a Python project for providing a simple interface to various algorithms for solving maximum entropy models with a focus on the Ising model. We describe the maximum entropy problem and give an overview of the algorithms that are implemented as part of CONIII including a regularized mean field method, Monte Carlo histogram, pseudolikelihood, and minimum probability flow. 
+%We then show examples of models that have been solved on various data sets using CONIII.
 \end{abstract}
 
 \maketitle
@@ -53,7 +54,7 @@ The modular structure of CONIII was inspired by the machine learning package sci
 With CONIII, it is possible to solve the inverse Ising problem with a variety of algorithms in just a few lines of code.
 %There are a variety of techniques for approaching the inverse problem|often in context of a particular model|but they are often presented as different approaches without clear relations to one another. Instead of focusing on the details of each technique separately, we relate these techniques to one another and point out when one would fail or be difficult to apply.
 
-We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
+%We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
 \section{What is maximum entropy?}
 Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that follows from insisting on some elementary principles of consistency. According to Shannon, information entropy, hereon just ``entropy'', over the probability distribution of possible configurations $s$ of a model is
@@ -209,26 +210,28 @@ Each iteration goes like $O(RN^2)$.
 We have implemented pseudolikelihood for the Ising model as detailed in \cite{Aurell:2012hi} in {\tt Pseudo}.
 
 \section{Minimum Probability Flow}
-Minimum probability flow uses an analytic approximation to write an easily computable objective function \cite{SohlDickstein:2011im}. Instead of estimating the probability distribution, the overarching idea is to analytically approximate how the probability distribution \textit{changes} as we modify the \textit{configurations}.
+Minimum probability flow involves analytically approximating how the probability distribution \textit{changes} as we modify the \textit{configurations} \cite{SohlDickstein:2011im}. In the methods so far mentioned, the approach has been to maximize the objective (the likelihood function) by immediately taking the derivative with respect to the parameters. With MPF, we first posit a set of dynamics that will lead the data distribution to equilibrate to that of the model. When these distributions are equivalent, then there is no ``probability flow'' between them. This technique is closely related to score matching where instead we have continuous state spaces and can directly take the derivative with respect to the states without specifying dynamics \cite{Hyvärinen:2007ed}. 
 
-As in the other methods so far mentioned, the approach has been to maximize the objective (the likelihood function) by immediately taking the derivative with respect to the parameters. And as we have seen, this approach is not feasible for large systems. With MPF, we insert another step before taking the derivative where we look at how the probability distribution will change as the configurations are modified. 
-
-Deterministic dynamics.
-
-As before, we start with minimizing the Kullback-Leibler divergence, but instead of taking the derivative with respect to the parameters, we would like to take the derivative with respect to the states \cite{Hyvärinen:2007ed}. If the state space is discrete, we can instead postulate a set of dynamics for how the probability evolves (more on this later), and take the derivative with respect to time. The idea is that  the change in the probability distribution relative to the data goes to zero when we have converged to the data. The parameters are found such that this happens.
-
-As is explained \cite{SohlDickstein:2011im}, one set of dynamics (they must converge to the equilibrium distribution?) is simply Monte Carlo where the master equation gives
-\begin{align}
-	\dot{p}_{\rm i} &= \sum_{j\neq i} \Gamma_{\rm ij} p_{\rm j} -\sum_{\rm j\neq i} \Gamma_{\rm ji} p_{\rm j}
-\end{align}
-and $\Gamma_{\rm ij}$ is the transition probability from state j to state i.
-
-So we are looking for how the distance between data and model changes when we evolve the dynamics of the model
+As before, we start with minimizing the Kullback-Leibler divergence, but instead of taking the derivative with respect to the parameters, we first ask how the probability flows between the model and data if the dynamics are run for an infinitesimal amount of time $\epsilon$, the idea being that the relative difference between the probability distributions are minimized with optimal parameters.
 \begin{align}
 	\partial_t D_{KL}(p^{(0)}||p^{(t)}\left(\{\lambda_k\}\right)) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)\\
 	K(\{\lambda_{\rm k}\}) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)
 \end{align}
-[Typically with large systems, numerical precision errors can become a problem because of the exponential form of $p(\lambda_{\rm k})$. By taking the logarithm of the objective $K$ can be crucial to an accurate implementation.]
+
+Monte Carlo dynamics (satisfying ergodicity and detailed balance) would lead to equilibration of the two distributions, so the suggestion of in \cite{SohlDickstein:2011im} is
+\begin{align}
+	\dot{p}_{\rm i} &= \sum_{j\neq i} \Gamma_{\rm ij} p_{\rm j} -\sum_{\rm j\neq i} \Gamma_{\rm ji} p_{\rm j}
+\end{align}
+with transition probabilities $\Gamma_{\rm ij} = g_{\rm ij}\exp\left[ \frac{1}{2}\left( E_{\rm j}-E_{\rm i} \right) \right]$ from state j to state i. The connectivity matrix $g_{\rm ij}$ specifies whether there is edge between states i and j such that probability can flow between them. By choosing a sparse $g_{\rm ij}$ while not breaking ergodicity, we drastically reduce the computational cost of calculating the objective function.
+
+Finally, we must find the minimum of the objective function
+\begin{align}
+	K(\{\lambda_{\rm k}\}) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)
+\end{align}
+
+MPF satisfies a number of useful properties:
+
+[Typically with large systems, numerical precision errors can become a problem because of the exponential form of $p(\lambda_{\rm k})$. By taking the logarithm of the objective $K$ can be crucial to a working implementation.]
 
 MPF is implemented in the {\tt MPF} class.
 
